--- a/src/Schtrix/App.config
+++ b/src/Schtrix/App.config
@@ -26,7 +26,7 @@
                 <value>False</value>
             </setting>
             <setting name="DeviceName" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="AutoPowerOn" serializeAs="String">
                 <value>True</value>
@@ -45,6 +45,9 @@
             </setting>
             <setting name="State" serializeAs="String">
                 <value>0</value>
+            </setting>
+            <setting name="Sounds" serializeAs="String">
+                <value>True</value>
             </setting>
         </Schtrix.Properties.Settings>
     </userSettings>
