--- a/src/Schtrix/Properties/Settings.settings
+++ b/src/Schtrix/Properties/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="State" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="Sounds" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
